# mvio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  download_dataset.sh  install_dependencies.sh
apps/: app.cpp
configs/: camera.yaml  config.yaml  kalman.yaml
configs/sources/: folder.yaml  phone.yaml  rpi.yaml
include/mvio/: config.h
include/mvio/estimators/: estimator.h  kalman_filter.h
include/mvio/pipeline/: Pipeline.h
include/mvio/sensor/: PhoneSource.h  RpiSource.h  core.h  source.h
include/mvio/vio/: imu.h  vo.h
matlab/: convert_data.m
src/estimators/: KalmanFilter.cpp
src/pipeline/: Pipeline.cpp
src/sensor/: FolderSource.cpp  PhoneSource.cpp  RpiSource.cpp
src/vio/: ImuPreintegration.cpp  VisualInertialOdometry3Dto2D.cpp  VisualOdometry.cpp  VisualOdometry3Dto2D.cpp
